# simple_online_realtime_tracking

./: CMakeLists.txt  ReadMe.md  package.xml
example/: sort_main.cpp
include/sort/: kalman_box_tracker.hpp  kalman_filter.hpp  sort.hpp  utils.hpp
include/sort_backend/: kalman_box_tracker.hpp  sort_backend.hpp
src/: kalman_box_tracker.cpp  kalman_filter.cpp  sort.cpp  sort_backend.cpp  utils.cpp
test/: sort_example.cpp  sort_main.cpp  test_kalman_box_tracker.cpp  test_kalman_filter.cpp  test_sort.cpp  test_sort_backend.cpp  test_utils.cpp
